Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -454,4 +454,240 @@ Imagine an airline not maintaining flight logs. Pilots would have no reliable re
 - Who did it?
 - Where did it happen from?
 
+:necktie: Logs must be collected centrally, protected from tampering, and retained for appropriate periods based on regulatory and business needs (sometimes months, sometimes years).
+
+**Auditable events** are actions or occurrences that must be recorded and, often, trigger a deeper review. These events typically include:
+- Authentication attempts (both successes and failures)
+- Access to sensitive data
+- Privilege escalations
+- Changes to security settings
+- Installation of new software
+
+Now, think about **thresholds**. You can't investigate every login failure—people forget passwords! But if there are 50 failed login attempts in 5 minutes from the same user, that’s suspicious.Thresholds define how much or how often an event must occur before it’s flagged for action.
+
+:bulb: Picture a hospital emergency room. If one person walks in coughing, it's normal. But if 50 people rush in coughing within an hour, you have a crisis. Thresholds help you separate isolated incidents from patterns that signal serious trouble.
+
+Here's a harsh reality: logs are evidence. If someone can alter them, they can erase their tracks. This makes log protection not just a technical necessity, but a legal one.
+
+Protecting logs involves several best practices:
+- Access Control: Only authorized personnel should be able to view or manage logs.
+- Integrity Checks: Use hashes to detect if a log has been tampered with.
+- Encryption: Logs should be encrypted in transit and at rest to prevent snooping.
+- Separation of Duties: Those who manage systems shouldn’t be able to edit the logs that record their activity.
+
+:bulb: In many insider threat cases, attackers first attempt to delete or alter logs after malicious actions. Smart organizations send logs in real-time to a separate, secured server—out of reach of the attacker’s permissions.
+
+:necktie: If it's not logged, it didn't happen. If it's logged but not protected, it might as well not have happened.
+
+Most people don't wake up excited to review gigabytes of system logs. But every breach investigation, every forensic triumph, every compliance audit that goes well—starts with good log management. Log management is the cybersecurity equivalent of health insurance. You don't appreciate it daily, but when disaster strikes, it's the only thing that keeps your world from collapsing.As a security professional, you need to approach logs as both historical records and active sensors. By managing them properly, defining auditable events and thresholds wisely, and protecting the integrity of log data fiercely, you build the foundation for leading secure, resilient organizations.
+
+### Open Questions ###
+
+1. Why is log management considered a foundational element of cybersecurity?
+
+<details> <summary>Show answer</summary> Good log management ensures organizations can monitor their environment, detect security incidents, troubleshoot effectively, meet regulatory requirements, and reconstruct security events after they happen. It acts as the backbone for visibility and accountability in cybersecurity operations. </details>
+
+2. What critical questions should good log management be able to answer during an investigation?
+
+<details> <summary>Show answer</summary> Good log management should be able to answer: *What happened? When did it happen? Who was involved? Where did it happen from?* These questions are critical to building a clear timeline and understanding the scope of an incident. </details>
+
+3. In the context of auditable events, why are thresholds important?
+
+<details> <summary>Show answer</summary> Thresholds help distinguish between normal behavior and suspicious activity by defining how often an event must occur before it demands attention. This reduces noise, prevents alert fatigue, and ensures security teams can prioritize genuine risks. </details>
+
+4. Give a real-world example of how poor log management contributed to a major security breach.
+
+<details> <summary>Show answer</summary> In the 2013 Target breach, attackers infiltrated the systems months in advance. Early warning signs were present in the logs, but because the logs were not effectively reviewed or acted upon, millions of customer records were stolen. This shows how ignored logs can translate into catastrophic breaches. </details>
+
+5. What are three examples of events that should always be audited in a security-focused environment?
+
+<details> <summary>Show answer</summary> Critical events to audit include: - Authentication attempts (both successful and failed) - Access to sensitive data - Any changes to security settings or privileges These ensure accountability and provide evidence in case of suspicious activities. </details>
+
+6. Why is protecting the integrity of log data essential for both security operations and legal purposes?
+
+<details> <summary>Show answer</summary> Protecting the integrity of log data is essential because logs serve as evidence during incident investigations and legal proceedings. If logs are tampered with, they lose their credibility, weakening both security response and potential legal cases. </details>
+
+7. How does separating the duties of system administrators and log managers enhance log security?
+
+<details> <summary>Show answer</summary> Separating system administrator and log manager roles ensures that individuals who might cause or witness security incidents cannot alter the records of their own activities. This enforces accountability and preserves the objectivity of the logs. </details>
+
+8. What are two key methods used to protect logs during transmission and storage?
+
+<details> <summary>Show answer</summary> Two key methods are: - Encrypting logs both during transmission and at rest to prevent unauthorized access - Using cryptographic hashes to verify log integrity and detect any tampering These ensure confidentiality, integrity, and evidentiary value. </details>
+
+---
+
+## 7.2.7 Threat intelligence (e.g., threat feeds, threat hunting) ##
+
+Threat intelligence is not just a collection of scary headlines about breaches. It’s analyzed, actionable knowledge about potential or existing threats that helps organizations make informed security decisions.
+
+Think of it this way: raw data is like random weather reports. Threat intelligence is a focused weather forecast specifically warning you of a hurricane moving toward your town.
+Threat Intelligence is important because security teams are already drowning in alerts. Without intelligence to prioritize what matters most, defenses get spread too thin—and real threats slip through.
+
+Good threat intelligence answers questions like:
+- Who is attacking?
+- What are their tactics, techniques, and procedures (TTPs)?
+- What vulnerabilities are being exploited?
+- What assets are being targeted?
+- How urgent is the threat?
+
+The most common types of Threat Intelligence are:
+- Strategic: Big-picture trends, such as a rise in ransomware attacks on healthcare.
+- Tactical: Indicators of compromise (IP addresses, file hashes) linked to active campaigns.
+- Operational: Specific warnings about ongoing attacks against your industry.
+- Technical: Immediate technical indicators like malware signatures.
+
+:necktie: Without a clear understanding of why threat intelligence matters, even the best tools become just noise generators. Intelligence lets you move from reactive to proactive.
+
+If threat intelligence is the weather forecast, threat feeds are the meteorological data streams feeding that forecast. A threat feed provides continuous updates on threats, often in an automated way.
+
+Examples of threat feeds include:
+
+- Lists of malicious IPs or domains
+- Malware signatures
+- Vulnerability disclosures
+- Indicators of compromise (IOCs)
+
+However, not all feeds are created equal. Some are curated by cybersecurity experts, others are mass-scraped from the internet. And here's the catch: if you consume threat feeds blindly without context or prioritization, you risk overwhelming your team with false positives.
+
+| Threat Feed Quality Factors | Details                                                   |
+|-----------------------------|-----------------------------------------------------------|
+| Timeliness                  | Is the feed updated quickly enough to catch fast-moving threats? |
+| Relevance                   | Does it apply to your industry and geography?             |
+| Accuracy                    | Are the indicators well-vetted to reduce false positives? |
+| Source Trustworthiness      | Is the feed maintained by a credible organization?        |
+
+:necktie: Threat feeds are the ingredients. Threat intelligence is the meal. You must cook wisely.
+
+**Threat hunting** flips the traditional defensive model on its head. Instead of waiting for alerts, hunters proactively look for signs of threats that might have evaded detection. It's like sending scouts beyond your castle walls, looking for footprints and broken branches instead of waiting for the enemy to break down the gate.
+
+Threat hunting combines:
+- Hypothesis-driven investigation (e.g., "What if a threat actor already compromised an internal host?")
+- Advanced analytics (user behavior analytics, anomaly detection)
+- Human intuition and experience.
+
+Hunters look for:
+- Lateral movement inside the network
+- Use of stolen credentials
+- Persistence mechanisms like rogue scheduled tasks
+- Signs of data exfiltration
+
+| Hunting Technique       | Description                                              |
+|--------------------------|----------------------------------------------------------|
+| Pattern-based hunting    | Search for known attack patterns and artifacts.          |
+| Anomaly-based hunting    | Look for deviations from normal system or user behavior. |
+| Intelligence-driven hunting | Focused hunts based on recent threat intelligence reports. |
+
+
+:necktie: Threat hunting is about assumption busting. It starts where automated systems end.
+
+**SOAR** is a suite of technologies designed to automate and orchestrate security tasks, enabling security operations centers (SOCs) to respond to threats more efficiently. It brings together three key elements: Orchestration, Automation, and Response. Let’s break this down:
+- Orchestration refers to the process of coordinating various security tools and processes within the organization. Imagine a conductor leading an orchestra—different instruments (or in this case, security tools) play in harmony to create a seamless security operation.
+- Automation is the magic that takes mundane, repetitive tasks out of the hands of human analysts. For example, if a malicious IP address is detected, a SOAR system can automatically block it across the network without requiring manual intervention, speeding up the process and reducing human error.
+- Response is the ability to handle incidents in real-time by executing predefined playbooks. These playbooks outline step-by-step instructions for responding to specific threats, ensuring consistency and quick execution, regardless of which analyst is on shift.
+
+As the number of cyberattacks grows and becomes more sophisticated, security teams struggle to keep up. There’s simply too much data and too many threats to analyze manually, let alone respond to. This is where SOAR comes in. By automating routine processes and orchestrating tools, SOAR significantly reduces the time to detect, respond, and remediate threats. Instead of security professionals drowning in alerts, they can focus on high-value tasks like threat hunting or strategic decision-making.
+
+In real-world terms, think of a business facing a Distributed Denial-of-Service (DDoS) attack. The security team’s first step is usually to validate the attack, then block the malicious traffic, and finally, notify leadership. With SOAR, these steps can be automated and executed faster, improving response time and limiting the damage. This automation also reduces the burden on analysts, allowing them to focus on more complex issues.
+
+Suppose an organization’s firewall detects an anomalous IP address engaging in suspicious activity. This alert is forwarded to the SOAR system, which automatically correlates it with threat intelligence sources to assess whether it’s a known threat. The SOAR system then checks predefined rules to decide whether to block the IP address, add it to a watchlist, or escalate it for further investigation by a human analyst. This automated flow ensures that the right action is taken quickly, without delay.
+
+Moreover, SOAR platforms are designed to integrate with a wide variety of security tools—firewalls, SIEMs (Security Information and Event Management systems), endpoint protection, threat intelligence platforms, and more. This means that when an alert is triggered in one tool, SOAR ensures that other tools are updated accordingly, streamlining the process and providing a unified view of security events.
+
+### Open Questions ###
+
+1. What is the key difference between raw data and threat intelligence in cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+Threat intelligence is analyzed, actionable knowledge that informs decision-making, while raw data is unfiltered information that lacks context or prioritization.
+</details>
+
+2. Why can relying solely on threat feeds without proper filtering be dangerous for a security team?  
+<details>
+  <summary>Show answer</summary>
+If you rely only on threat feeds without filtering, you risk overwhelming analysts with false positives, making it harder to identify real threats and decreasing the effectiveness of the security program.
+</details>
+
+3. What are some factors that determine the quality of a threat feed?  
+<details>
+  <summary>Show answer</summary>
+The quality of a threat feed depends on timeliness, relevance to the organization's environment, accuracy (low false positives), and the trustworthiness of the source.
+</details>
+
+4. In threat hunting, why is hypothesis-driven investigation important?  
+<details>
+  <summary>Show answer</summary>
+Hypothesis-driven investigation is important in threat hunting because it focuses the search on specific potential threats, allowing hunters to detect stealthy attacks that automated systems might miss.
+</details>
+
+5. How do threat intelligence, threat feeds, and threat hunting complement each other in a cybersecurity program?  
+<details>
+  <summary>Show answer</summary>
+Threat intelligence identifies the threats to prioritize, threat feeds provide real-time indicators, and threat hunting actively searches for hidden threats, together creating a proactive and resilient security posture.
+</details>
+
+
+---
+
+## 7.2.8 User and Entity Behavior Analytics (UEBA) ##
+
+As cyber threats continue to grow in both number and complexity, traditional security measures such as firewalls and antivirus software are no longer enough to protect an organization’s digital assets. In response to this evolving landscape, the cybersecurity industry has introduced more sophisticated techniques, one of which is User and Entity Behavior Analytics (UEBA). UEBA is a cutting-edge tool that provides organizations with the ability to detect anomalous behavior within their network by analyzing the behavior of users and entities (e.g., devices, applications, servers) in real-time.
+
+At its core, UEBA is a security solution that uses machine learning, statistical analysis, and data mining to analyze the behavior of users and entities in order to detect unusual patterns that could indicate potential security threats. Unlike traditional security systems that rely on predefined signatures (e.g., for known malware), UEBA looks for behavioral anomalies—actions that deviate from the norm—regardless of whether the behavior corresponds to a known threat.
+
+For example, if an employee who typically works from 9 AM to 5 PM suddenly logs in at 3 AM from an IP address in another country, that might raise a red flag. Similarly, if a server starts transmitting large amounts of data to an unfamiliar external address, UEBA can identify this as unusual behavior, potentially signaling a data exfiltration attempt.
+
+The real strength of UEBA lies in its ability to understand “normal” behavior for each user or entity, and then flag behavior that diverges from that baseline. This is crucial because many cyberattacks, such as insider threats or advanced persistent threats (APTs), may not be detected by traditional methods that only focus on known signatures or known attack patterns. UEBA shifts the focus to behavior—an approach that can uncover novel or hidden attacks.
+
+To appreciate the power of UEBA, it’s essential to understand how it functions. UEBA solutions typically gather vast amounts of data from across an organization's network—this data can come from logs, event monitoring systems, and other security tools. The system then analyzes this data using advanced machine learning algorithms and other analytics techniques to identify patterns of user and entity behavior.
+
+The Process of UEBA Implementation is basically made of 5 steps:
+1. **Data Collection:** The first step is gathering data from various sources within the organization, including network traffic, user activity logs, device behavior, authentication records, and more. This raw data is the foundation for behavior analysis.
+2. **Data Normalization:** Once the data is collected, it is standardized and cleaned up. Since this data comes from various sources, normalization ensures that it can be analyzed in a consistent manner.
+3. **Behavior Profiling:** The next step involves creating profiles for individual users and entities based on their normal behavior. These profiles are built using historical data, which is analyzed to understand each user’s typical activities, such as login times, locations, and actions performed on the network. Similarly, entities (e.g., servers, devices) have their own profiles based on expected usage patterns.
+4. **Anomaly Detection:** Once these profiles are in place, the UEBA system continuously monitors activity across the network in real-time. If a user or entity performs an action that deviates significantly from their established pattern—say, accessing sensitive files they typically don’t interact with or initiating a large data transfer—an alert is triggered.
+5. **Alert and Response:** When an anomaly is detected, the system generates an alert that is prioritized based on the severity of the behavior. Security analysts are then able to investigate the alert, determine whether it indicates a legitimate threat, and take appropriate action. For example, if the anomaly is benign (e.g., a legitimate employee working late from a new location), the alert may be closed. However, if the anomaly suggests malicious activity, such as an attempted data breach, the response might involve further investigation, blocking access, or notifying the relevant stakeholders.
+
+UEBA adds tremendous value to an organization’s security posture by shifting the focus away from just detecting known threats to identifying potential zero-day exploits, insider threats, and compromised accounts. Some of the key areas where UEBA excels include:
+
+| Use Case                     | Description |
+|-------------------------------|-------------|
+| **Insider Threat Detection**  | One of the most difficult threats to detect is an insider threat—whether it’s a malicious employee, a disgruntled worker, or someone with compromised credentials. Traditional methods might fail to catch these threats because the attacker already has legitimate access to the network. UEBA excels here because it monitors user behavior over time and can spot unusual access patterns, such as an employee downloading sensitive files they don’t normally work with or accessing resources at unusual hours. This behavior would raise a red flag and trigger an alert. |
+| **Advanced Persistent Threats (APTs)** | APTs are sophisticated, long-term attacks where the adversary often takes steps to remain undetected for as long as possible. APTs may involve slow, deliberate data exfiltration or lateral movement within the network. Because these attacks are subtle and do not immediately manifest as traditional malware or known exploits, they can evade detection by traditional security measures. UEBA, however, is adept at spotting unusual patterns and gradual anomalies that would otherwise go unnoticed. |
+| **Compromised Accounts**      | When a user’s credentials are compromised, attackers can use them to move around the network and access sensitive data. UEBA can help detect these types of attacks by identifying abnormal login patterns, such as access from unfamiliar locations or at odd times. Moreover, UEBA can spot suspicious activities, like a user accessing a high volume of data or interacting with files they’ve never worked with before. |
+
+
+### Open Questions ###
+
+1. What does UEBA stand for and what is its primary purpose in cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+UEBA stands for User and Entity Behavior Analytics, and its primary purpose is to detect anomalies in the behavior of users and entities within a network. By analyzing behavioral patterns, UEBA helps identify potential threats that traditional security measures might miss.
+</details>
+
+2. How does UEBA differ from traditional security tools that focus on signature-based detection?  
+<details>
+  <summary>Show answer</summary>
+Unlike traditional security tools, which primarily rely on signature-based detection (looking for known malware or attack patterns), UEBA uses machine learning and statistical analysis to detect deviations from normal behavior. It focuses on identifying unknown or novel threats based on the activities of users and entities, rather than relying solely on predefined attack signatures.
+</details>
+
+3. What types of security threats can UEBA help detect, and why is it particularly useful for identifying insider threats?  
+<details>
+  <summary>Show answer</summary>
+UEBA is particularly effective at detecting threats such as insider attacks, advanced persistent threats (APTs), and compromised accounts. It is valuable for detecting insider threats because it monitors and compares user behavior over time, flagging deviations like unusual access patterns or data transfers that might indicate malicious intent.
+</details>
+
+4. How does UEBA create profiles for users and entities, and what role do these profiles play in detecting anomalies?  
+<details>
+  <summary>Show answer</summary>
+UEBA creates behavior profiles by analyzing historical data about how users and entities typically interact with the system. These profiles include details like login times, access frequency, and which resources are typically accessed. When an action deviates significantly from this profile—such as logging in from an unusual location or accessing files they don’t usually interact with—the system flags it as an anomaly that might indicate malicious activity.
+</details>
+
+5. Can you provide a real-world example of how UEBA helped detect a security incident?  
+<details>
+  <summary>Show answer</summary>
+In a real-world scenario, UEBA helped a financial institution detect a compromised account. An executive’s credentials were stolen through phishing and used to access the network at an unusual time and from a foreign location. The UEBA system flagged this behavior as an anomaly, which led the security team to investigate and thwart the data exfiltration attempt.
+</details>
+
+---
 
