Update 7.04 Apply foundational security operations concepts.md

--- a/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
+++ b/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
@@ -104,6 +104,130 @@ Monitoring administrative activities provides traceability and accountability. I
 
 ---
 
+## 7.4.2 Separation of Duties (SoD) and responsibilities ##
+
+Segregation of Duties (SoD) is the practice that stops any single individual from having unchecked power or control over critical processes. It’s a security philosophy rooted in an understanding of human nature: mistakes happen, temptations arise, and nobody should be in a position to harm an organization — intentionally or accidentally — without others noticing.
+
+:necktie: SoD ensures no single person can both commit and conceal errors, fraud, or sabotage. It’s about building a resilient organization, not one vulnerable to a single point of failure.
+
+**Two-person control** (sometimes called dual control) is exactly what it sounds like: two qualified individuals must work together to complete a sensitive action.
+Think of launching a nuclear missile. Movies often show two officers turning keys at the same time — a vivid example of two-person control. No single individual, no matter how loyal or competent, should have the ability to unleash something that important alone.
+
+Two-person control might apply for example  to:
+- Deploying critical software updates
+- Issuing or revoking digital certificates
+- Accessing sensitive cryptographic keys
+- Making changes to firewall or access control configurations
+
+By requiring two people, organizations reduce the risk of malicious insiders, errors, and oversight failure. It’s a layer of protection, a second set of eyes, and a psychological deterrent all in one.
+
+:necktie: Two-person control does more than catch mistakes — it forces collaboration and encourages accountability. When someone knows a peer is verifying their work, they’re more likely to double-check it themselves.
+
+By **rotating people** through different roles and responsibilities over time, organizations prevent individuals from building unassailable silos of knowledge and control. It’s about preventing anyone from becoming irreplaceable — because in cybersecurity, nobody should be irreplaceable.
+
+Picture an IT administrator who’s been managing the same critical system for eight years without oversight. They might set up backdoors, bypass processes, or simply develop habits nobody questions. Not necessarily out of malice — sometimes, it’s just convenience or "the way it’s always been."
+
+When you rotate jobs:
+- Hidden bad practices are exposed
+- Fresh perspectives find overlooked vulnerabilities
+- No one person can maintain secret control indefinitely
+
+:necktie: Rotation is a natural audit. It creates an environment where "that’s just how it's done" is no longer an acceptable answer.
+
+In practice, organizations might require security administrators, database managers, or auditors to switch roles temporarily or permanently at regular intervals. Even limited rotations, like covering another administrator’s duties for a month, are valuable.
+
+Job rotation also strengthens organizational resilience: if someone leaves unexpectedly, the knowledge doesn’t leave with them.
+
+Imagine forcing an employee to take two consecutive weeks off work — not just a perk, but a critical security measure. That’s the logic behind mandatory vacations.When someone who manages critical systems steps away, it creates an opportunity to:
+- Review their work
+- Spot anomalies or irregularities
+- Detect long-running schemes or mistakes
+
+If someone is involved in wrongdoing — say, siphoning off funds, manipulating logs, or hiding unauthorized changes — they often must be present to cover their tracks. Forced absence disrupts that ability.
+
+A classic example comes from the banking world: many cases of embezzlement were uncovered only when employees were on vacation and colleagues noticed discrepancies.
+In cybersecurity, the same principle applies. Mandatory vacations help detect:
+- Log manipulation
+- Unauthorized data access
+- Configuration drift
+- Bypass of security controls
+
+Moreover, vacations reduce burnout among security and IT staff — another key risk factor for errors and security incidents.
+
+Importantly, for vacations to be effective, organizations must actively monitor systems and operations during an employee's absence, not just "hold the fort."
+
+:link: Refer also to [1.8.2 Employment agreements and policy driven requirements](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.08%20Contribute%20to%20and%20enforce%20personnel%20security%20policies%20and%20procedures.md#182-employment-agreements-and-policy-driven-requirements)
+
+### Open Questions ###
+
+1. What is the primary purpose of segregation of duties in cybersecurity?
+
+<details> <summary>Show answer</summary> The primary purpose of segregation of duties is to ensure that no single individual has unchecked control over critical systems or processes, reducing the risk of fraud, errors, or sabotage. </details>
+
+2. How does two-person control reduce risk in critical operations?
+
+<details> <summary>Show answer</summary> Two-person control requires two qualified individuals to complete sensitive tasks together, creating a second layer of verification and accountability that reduces both mistakes and insider threats. </details>
+
+3. Why is job rotation important for organizational security?
+
+<details> <summary>Show answer</summary> Job rotation prevents individuals from building unassailable control over systems, helps expose hidden vulnerabilities, and ensures operational knowledge is distributed across multiple team members. </details>
+
+4. What risks are mitigated by enforcing mandatory vacations?
+
+<details> <summary>Show answer</summary> Mandatory vacations force individuals to step away from their duties, allowing anomalies or long-running misconduct to surface when others monitor their systems and responsibilities. </details>
+
+5. How does segregation of duties protect against insider threats?
+
+<details> <summary>Show answer</summary> Segregation of duties protects against insider threats by making malicious acts harder to commit alone and easier to detect through enforced collaboration and transparency. </details>
+
+6. In cybersecurity, give an example of where two-person control might be used.
+
+<details> <summary>Show answer</summary> An example of two-person control in cybersecurity is requiring two administrators to approve critical firewall rule changes before they are applied to production systems. </details>
+
+7. What is the relationship between job rotation and hidden vulnerabilities?
+
+<details> <summary>Show answer</summary> Job rotation helps uncover hidden vulnerabilities because new individuals can spot bad practices, unauthorized changes, or security weaknesses that entrenched employees might overlook. </details>
+
+8. Why are mandatory vacations considered an audit tool?
+
+<details> <summary>Show answer</summary> Mandatory vacations act as an audit tool by removing a person from their environment, which can reveal unauthorized activities or security irregularities that require constant cover-up. </details>
+
+9. How does segregation of duties contribute to organizational resilience?
+
+<details> <summary>Show answer</summary> Segregation of duties builds organizational resilience by ensuring systems and operations do not depend on the integrity or availability of a single individual. </details>
+
+10. Why is relying on “trust me” systems dangerous in cybersecurity?
+
+<details> <summary>Show answer</summary> Relying on "trust me" systems is dangerous because it assumes individuals are infallible; segregation of duties designs security that doesn’t depend on perfect human behavior. </details>
+
+---
+
+## 7.4.3 Privileged account management ##
+
+Privileged Account Management (PAM) refers to the strategies, processes, and tools used to control, monitor, secure, and audit the use of privileged accounts. These accounts — administrator accounts, service accounts, root accounts, and others — have elevated rights that can configure systems, access sensitive data, and control networks.
+
+Privileged accounts come in many flavors:
+
+| Account Type              | Description                                                                                   |
+|---------------------------|-----------------------------------------------------------------------------------------------|
+| Administrator accounts    | Can create and delete other users, change configurations, and access all data.                |
+| Service accounts          | Run applications and often need access to system resources — but they’re frequently forgotten and unmanaged. |
+| Root accounts             | (Especially in Unix/Linux) have unlimited power over a system.                                |
+| Domain administrator accounts | Can control an entire Active Directory environment.                                       |
+
+Each type is a high-value target for attackers — and often a weak link if left unmanaged.
+
+Effective PAM isn't just about passwords; it’s about principles and practices that reduce risk.
+
+The principle of least privilege means giving users the minimum level of access they need to perform their job — no more, no less.
+
+In PAM, this translates to:
+- Only granting admin rights when needed
+- Removing rights immediately when no longer necessary
+- Limiting lateral movement for attackers
+
+:brain: CISSP loves asking about least privilege because it’s a foundational concept in cybersecurity architecture.
+
 
 
 
